tests/paczka1/small_fuzzy/93398502.err
Error in line 2: Uvmegi68 A504 19,4
Error in line 3: Uvmegi68 S39 73,3
Error in line 5: U1F A504 21,4
Error in line 4: Uvmegi68 A501 37,8
Error in line 7: Uvmegi68 S250 17,2
Error in line 8: Uvmegi68 S39 87,7
